# scj3_cmake_test

./: CMakeLists.txt  LICENSE  README.md  main.cpp
.github/workflows/: cmake.yml
